# hex_modifier_tool

./: pyproject.toml
.github/workflows/: lint.yml  test.yml
hex_modifier_tool/: __init__.py
tests/data/: zephyr_fixed.hex  zephyr_missing_crc.hex
